<resources>
    <string name="app_name">Anagram Game</string>

    <string name="hello_world">Make out as many words from a string as possible.</string>
    <string name="about_str">About</string>
    <string name="hard_challenge">Hard Challenge</string>
    <string name="medium_challenge">Medium Challenge</string>
    <string name="easy_challenge">Easy Challenge</string>
    <string name="begin_game">Begin Game</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="credits_string">Created by: \n Brandon Allen \n Christian Buskirk \n Kyle Granchelli \n Yi Zong</string>
</resources>
