<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hard_challenge" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard_challenge"
        android:id="@+id/button"
        android:enabled="true"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_challenge"
        android:id="@+id/button2"
        android:enabled="true"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_challenge"
        android:id="@+id/button3"
        android:enabled="true"
        android:layout_below="@+id/button2"
        android:layout_alignEnd="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_game"
        android:id="@+id/button6"
        android:enabled="true"
        android:layout_below="@+id/textView2"
        android:layout_toStartOf="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:id="@+id/button4"
        android:enabled="true"
        android:layout_below="@+id/button6"
        android:layout_alignEnd="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_str"
        android:id="@+id/button5"
        android:enabled="true"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Output"
        android:id="@+id/textView2"
        android:textSize="48dp"
        android:enabled="true"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button3"
        android:layout_marginStart="42dp" />

</RelativeLayout>
